--- a/roles/nginx_vhosts/tasks/main.yml
+++ b/roles/nginx_vhosts/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.apt:
     name: nginx
     state: present
-    update_cache: yes
+    update_cache: true
 
 - name: Create
   ansible.builtin.file:
